--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ node_js:
 before_script:
   - npm prune
 script:
-  - npm run lint && npm test
+  - npm run lint && npx webpack && npm test
 after_success:
   - npm install -g travis-deploy-once
   - travis-deploy-once "npx semantic-release"
