--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "google-play-url-builder",
   "version": "0.0.0-development",
   "description": "Google Play URL builder.",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "lint": "eslint *.js",
+    "lint": "eslint src/*.js test.js",
     "test": "mocha"
   },
   "repository": "mxl/google-play-url-builder",
@@ -24,7 +24,8 @@
     "node": ">= 6.0"
   },
   "files": [
-    "index.js"
+    "src/index.js",
+    "dist/index.js"
   ],
   "license": "MIT",
   "bugs": {
@@ -32,9 +33,15 @@
   },
   "homepage": "https://github.com/mxl/google-play-url-builder#readme",
   "devDependencies": {
+    "@babel/core": "^7.0.0-beta.55",
+    "@babel/preset-env": "^7.0.0-beta.55",
+    "babel-loader": "^8.0.0-beta.4",
     "eslint": "^5.1.0",
     "mocha": "^5.2.0",
     "semantic-release": "^15.8.1",
-    "semantic-release-cli": "^4.0.6"
-  }
+    "semantic-release-cli": "^4.0.6",
+    "webpack": "^4.16.3",
+    "webpack-cli": "^3.1.0"
+  },
+  "dependencies": {}
 }
